--- a/html/task1.html
+++ b/html/task1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/task1.css"/>
     <title>Document</title>
 </head>
 <body>
@@ -40,6 +40,6 @@
     </li>
   </ul>
     
-  <script src ="/js/index.js"></script>
+  <script src ="/js/task1.js"></script>
 </body>
 </html>
