--- a/TASK3/html/task3.html
+++ b/TASK3/html/task3.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/TASK2/css/task2.css">
+    <link rel="stylesheet" type="text/css" href="/TASK3/css/task3.css">
     <title>Document</title>
 </head>
 <body>
 
 <!-- Завдання 1 -->
-<ul id="ingredients"></ul>
+<ul class="gallery"></ul>
     
-  <script src ="/TASK2/js/task2.js"></script>
+  <script src ="/TASK3/js/task3.js"></script>
 </body>
 </html>
