--- a/Task4/html/task4.html
+++ b/Task4/html/task4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/Task4/css/task4.css">
+    <link rel="stylesheet" type="text/css" href="/TASK4/css/task4.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,6 +16,6 @@
   <button type="button" data-action="increment">+1</button>
 </div>
     
-  <script src ="/Task4/js/task4.js"></script>
+  <script src ="/TASK4/js/task4.js"></script>
 </body>
 </html>
