--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <!-- Завдання 2 -->
 
-  <!-- <ul id="ingredients"></ul> -->
+  <ul id="ingredients"></ul>
 
    <!-- Завдання 3 -->
 
@@ -105,7 +105,7 @@
 
   <!-- <script src ="/jsAll/task1.js"></script> -->
 
-  <!-- <script src ="/jsAll/task2.js"></script> -->
+  <script src ="/jsAll/task2.js"></script>
 
   <!-- <script src ="/jsAll/task3.js"></script> -->
 
