--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <!-- Завдання 2 -->
 
-  <ul id="ingredients"></ul>
+  <!-- <ul id="ingredients"></ul> -->
 
    <!-- Завдання 3 -->
 
@@ -73,9 +73,9 @@
 
    <!-- Завдання 7 -->
 
-   <!-- <input id="font-size-control" type="range" min="16" max="96" value = "16" />
+   <input id="font-size-control" type="range" min="16" max="96"/>
    <br />
-   <span id="text">Abracadabra!</span> -->
+   <span id="text">Abracadabra!</span>
 
 
    <!-- Завдання 8 -->
@@ -105,7 +105,7 @@
 
   <!-- <script src ="/jsAll/task1.js"></script> -->
 
-  <script src ="/jsAll/task2.js"></script>
+  <!-- <script src ="/jsAll/task2.js"></script> -->
 
   <!-- <script src ="/jsAll/task3.js"></script> -->
 
@@ -115,7 +115,7 @@
 
   <!-- <script src ="/jsAll/task6.js"></script> -->
 
-  <!-- <script src ="/jsAll/task7.js"></script> -->
+  <script src ="/jsAll/task7.js"></script>
 
   <!-- <script src ="/jsAll/task8.js"></script> -->
 
