--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
    <!-- Завдання 7 -->
 
-   <input id="font-size-control" type="range" min="16" max="96"/>
+   <!-- <input id="font-size-control" type="range" min="16" max="96"/>
    <br />
-   <span id="text">Abracadabra!</span>
+   <span id="text">Abracadabra!</span> -->
 
 
    <!-- Завдання 8 -->
@@ -115,7 +115,7 @@
 
   <!-- <script src ="/jsAll/task6.js"></script> -->
 
-  <script src ="/jsAll/task7.js"></script>
+  <!-- <script src ="/jsAll/task7.js"></script> -->
 
   <!-- <script src ="/jsAll/task8.js"></script> -->
 
