--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- <h1>Завдання</h1> -->
 <!-- Завдання 1 -->
 
-<!-- <ul id="categories">
+<ul id="categories">
     <li class="item">
       <h2>Animals</h2>
       <ul>
@@ -39,7 +39,7 @@
         <li>Node.js</li>
       </ul>
     </li>
-  </ul> -->
+  </ul>
 
   <!-- Завдання 2 -->
 
@@ -103,7 +103,7 @@
 
 
 
-  <!-- <script src ="/jsAll/task1.js"></script> -->
+  <script src ="/jsAll/task1.js"></script>
 
   <!-- <script src ="/jsAll/task2.js"></script> -->
 
