--- a/index.html
+++ b/index.html
@@ -43,44 +43,44 @@
 
   <!-- Завдання 2 -->
 
-  <ul id="ingredients"></ul>
+  <!-- <ul id="ingredients"></ul> -->
 
    <!-- Завдання 3 -->
 
-   <ul class="gallery"></ul>
+   <!-- <ul class="gallery"></ul> -->
 
    <!-- Завдання 4 -->
 
-   <div id="counter">
+   <!-- <div id="counter">
     <button type="button" data-action="decrement">-1</button>
     <span id="value">0</span>
     <button type="button" data-action="increment">+1</button>
-  </div>
+  </div> -->
 
    <!-- Завдання 5 -->
 
-   <input type="text" id="name-input" placeholder="Please enter your name" />
-   <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+   <!-- <input type="text" id="name-input" placeholder="Please enter your name" />
+   <h1>Hello, <span id="name-output">Anonymous</span>!</h1> -->
 
    <!-- Завдання 6 -->
 
-   <input
+   <!-- <input
   type="text"
   id="validation-input"
   data-length="6"
   placeholder="Please enter 6 symbols"
-  />
+  /> -->
 
    <!-- Завдання 7 -->
 
-   <input id="font-size-control" type="range" min="16" max="96"/>
+   <!-- <input id="font-size-control" type="range" min="16" max="96"/>
    <br />
-   <span id="text">Abracadabra!</span>
+   <span id="text">Abracadabra!</span> -->
 
 
    <!-- Завдання 8 -->
 
-    <form class="login-form">
+    <!-- <form class="login-form">
     <label>
       Email
       <input type="email" name="email" />
@@ -90,36 +90,36 @@
       <input type="password" name="password" />
     </label>
     <button type="submit">Login</button>
-   </form>
+   </form> -->
 
    <!-- Завдання 9 -->
 
-   <div class="widget">
+   <!-- <div class="widget">
     <p>Background color: <span class="color">-</span></p>
     <button type="button" class="change-color">Change color</button>
   </div>
-  
+   -->
     
 
 
 
   <script src ="/jsAll/task1.js"></script>
 
-  <script src ="/jsAll/task2.js"></script>
+  <!-- <script src ="/jsAll/task2.js"></script> -->
 
-  <script src ="/jsAll/task3.js"></script>
+  <!-- <script src ="/jsAll/task3.js"></script> -->
 
-  <script src ="/jsAll/task4.js"></script>
+  <!-- <script src ="/jsAll/task4.js"></script> -->
 
-  <script src ="/jsAll/task5.js"></script>
+  <!-- <script src ="/jsAll/task5.js"></script> -->
 
-  <script src ="/jsAll/task6.js"></script>
+  <!-- <script src ="/jsAll/task6.js"></script> -->
 
-  <script src ="/jsAll/task7.js"></script>
+  <!-- <script src ="/jsAll/task7.js"></script> -->
 
-  <script src ="/jsAll/task8.js"></script>
+  <!-- <script src ="/jsAll/task8.js"></script> -->
 
-  <script src ="/jsAll/task9.js"></script>
+  <!-- <script src ="/jsAll/task9.js"></script> -->
 
 
 
